--- a/GridWorld/Makefile
+++ b/GridWorld/Makefile
@@ -115,4 +115,4 @@ clean:
 	find . -maxdepth 1 -iname "*.samples" | xargs -tr rm
 
 nuke: #You probably don't want to make this one
-	find ErrorBars/ -maxdepth 1 -iname "plot.dat*" | xargs -tr rm
+	find ErrorBars/ -maxdepth 1 -iname "*.dat*" | xargs -tr rm
