Courbes "threshold" et "threshold_EB" pour le problème continu

--- a/InvertedPendulum/Makefile
+++ b/InvertedPendulum/Makefile
@@ -1,5 +1,5 @@
-CFLAGS=-g -Wall -pedantic -std=c99 `pkg-config --cflags gsl` -I..
-LFLAGS=`pkg-config --libs gsl` -lm -g
+CFLAGS=-O3 -Wall -pedantic -std=c99 `pkg-config --cflags gsl` -I..
+LFLAGS=`pkg-config --libs gsl` -lm -O3
 
 InvertedPendulum.o: InvertedPendulum.c InvertedPendulum.h ../utils.h
 	gcc -c $(CFLAGS) InvertedPendulum.c
@@ -30,72 +30,41 @@ plot.exe: plot.o ../utils.o ../LSPI.o simulator.o ../greedy.o ../LSTDQ.o ../abbe
 plot.o: plot.c InvertedPendulum.h ../utils.h ../LSPI.h ../greedy.h simulator.h ../abbeel2004apprenticeship.h ../LSTDmu.h
 	gcc -c $(CFLAGS) plot.c
 
-#Criteria for Monte-Carlo w.r.t. Iterations
-criteria_mc.pdf: criteria_mc.eps
-	epstopdf criteria_mc.eps
+#Threshold at which LSTDmu starts working for 1 and 100 episodes from the expert
+threshold_EB.tex: threshold_EB.pdf
+	cat threshold_EB.tex | sed "s|threshold_EB|../Code/InvertedPendulum/threshold_EB|g" > tmp.tex && mv tmp.tex threshold_EB.tex
 
-criteria_mc.eps: criteria_mc.dat criteria_mc.gp
-	gnuplot criteria_mc.gp
+threshold_EB.pdf: threshold_EB.eps
+	epstopdf threshold_EB.eps
 
-criteria_mc.dat: plot.dat
-	cat plot.dat | grep "^1000" | sed 's/1000 //'> criteria_mc.dat
+threshold_EB.eps: threshold_1.dat-0 threshold_100.dat-0 threshold_EB.gp ErrorBars
+	gnuplot threshold_EB.gp
 
-clean_criteria_mc.dat: clean_plot.dat
-	rm criteria_mc.dat
+.PHONY: ErrorBars
 
-# #Criteria for LSTD w.r.t. number of samples from the expert
-# criteria_lstd_EB.pdf: criteria_lstd_EB.eps
-# 	epstopdf criteria_lstd_EB.eps
+ErrorBars:
+	../../Utils/ErrorBars.py
 
-# criteria_lstd_EB.eps: criteria_lstd.dat-0 criteria_lstd.dat-1 criteria_lstd.dat-2 criteria_lstd.dat-3 criteria_lstd_EB.gp
-# 	gnuplot criteria_lstd_EB.gp
+threshold.tex: threshold.pdf
+	cat threshold.tex | sed "s|threshold|../Code/InvertedPendulum/threshold|g" > tmp.tex && mv tmp.tex threshold.tex
 
-criteria_lstd.pdf: criteria_lstd.eps
-	epstopdf criteria_lstd.eps
+threshold.pdf: threshold.eps
+	epstopdf threshold.eps
 
-criteria_lstd.eps: criteria_lstd.dat criteria_lstd.gp
-	gnuplot criteria_lstd.gp
+threshold.eps: threshold_1.dat threshold_100.dat threshold.gp
+	gnuplot threshold.gp
 
-criteria_lstd.dat: plot.dat
-	cat plot.dat | grep -E "^B " | sed "s/B //"> criteria_lstd.dat
+threshold_1.dat: plot.dat
+	cat plot.dat | grep "^1-LSTD" | sed 's/1-LSTD //' | cut -d' ' -f'2 3' > threshold_1.dat
 
-clean_criteria_lstd.dat: clean_plot.dat
-	rm criteria_lstd.dat
+clean_threshold_1.dat: clean_plot.dat
 
-#Criteria for MC w.r.t. number of samples from the expert
-criteria_mc_samples.dat: plot.dat
-	cat plot.dat | grep -E "^C " | sed "s/C //"> criteria_mc_samples.dat
+threshold_100.dat: plot.dat
+	cat plot.dat | grep "^100-LSTD" | sed 's/100-LSTD //' | cut -d' ' -f'2 3' > threshold_100.dat
 
-clean_mc_samples.dat: clean_plot.dat
-	rm criteria_mc_samples.dat
+clean_threshold_100.dat: clean_plot.dat
 
-# #True error for both MC and LSTD w.r.t. number of samples from the expert
-# both_error_EB.pdf: both_error_EB.eps
-# 	epstopdf both_error_EB.eps
 
-# both_error_EB.eps: both_error.dat-0 both_error.dat-1 both_error_EB.gp
-# 	gnuplot both_error_EB.gp
-
-# both_error.dat-0: ErrorBars
-
-# both_errot.dat-1: ErrorBars
-
-# ErrorBars: conf.py
-# 	../../Utils/ErrorBars.py
-
-both_error.pdf: both_error.eps
-	epstopdf both_error.eps
-
-both_error.eps: both_error.dat both_error.gp
-	gnuplot both_error.gp
-
-both_error.dat: criteria_mc_samples.dat criteria_lstd.dat
-	cat criteria_lstd.dat | cut -d" " -f'1 4' > tmp &&\
-	cat criteria_mc_samples.dat | cut -d" " -f'1 4' > tmp2 &&\
-	paste -d' ' tmp tmp2 > both_error.dat
-
-clean_both_error.dat: clean_criteria_mc_samples.dat clean_criteria_lstd.dat
-	rm both_error.dat
 
 clean:
 	find . -maxdepth 1 -iname "*.o"       | xargs -tr rm &&\
@@ -105,5 +74,5 @@ clean:
 	find . -maxdepth 1 -iname "*~"        | xargs -tr rm &&\
 	find . -maxdepth 1 -iname "*.samples" | xargs -tr rm
 
-# nuke: #You probably don't want to make this one
-# 	find ErrorBars/ -maxdepth 1 -iname "plot.dat*" | xargs -tr rm
+nuke: #You probably don't want to make this one
+	find ErrorBars/ -maxdepth 1 -iname "*.dat*" | xargs -tr rm
