--- a/Makefile.org
+++ b/Makefile.org
@@ -29,7 +29,7 @@ SUB_DIRS=ChainWalk GridWorld InvertedPendulum
    This triggers the following :
     #+begin_src make :tangle Makefile
 lagoudakis2003least_figure10.pdf: LSPI.o LSTDQ.o utils.o greedy.o
-	make -C ChainWalk lagoudakis2003least_figure10.pdf && cp ChainWalk/lagoudakis2003least_figure10.pdf ./
+	$(MAKE) -C ChainWalk lagoudakis2003least_figure10.pdf && cp ChainWalk/lagoudakis2003least_figure10.pdf ./
     #+end_src
    
    The figure should be the same as in the forementionned paper, but with error bars. See the relevant [[file:ChainWalk/Makefile.org][Makefile]] to learn more about it.
@@ -46,19 +46,19 @@ lagoudakis2003least_figure10.pdf: LSPI.o LSTDQ.o utils.o greedy.o
    
     #+begin_src make :tangle Makefile
 both_error_EB.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o LSTDmu.o criteria.o
-	make -C GridWorld both_error_EB.tex && cp GridWorld/both_error_EB.pdf ./both_error_EB.pdf
+	$(MAKE) -C GridWorld both_error_EB.tex && cp GridWorld/both_error_EB.pdf ./both_error_EB.pdf
 
 threshold.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o LSTDmu.o criteria.o
-	make -C InvertedPendulum threshold.tex && cp InvertedPendulum/threshold.pdf ./threshold.pdf
+	$(MAKE) -C InvertedPendulum threshold.tex && cp InvertedPendulum/threshold.pdf ./threshold.pdf
 
 threshold_EB.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o LSTDmu.o criteria.o
-	make -C InvertedPendulum threshold_EB.tex && cp InvertedPendulum/threshold_EB.pdf ./threshold.pdf
+	$(MAKE) -C InvertedPendulum threshold_EB.tex && cp InvertedPendulum/threshold_EB.pdf ./threshold.pdf
 
 criteria_mc.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o LSTDmu.o criteria.o
-	make -C GridWorld criteria_mc.tex && cp GridWorld/criteria_mc.pdf ./criteria_mc.pdf
+	$(MAKE) -C GridWorld criteria_mc.tex && cp GridWorld/criteria_mc.pdf ./criteria_mc.pdf
 
 criteria_lstd_EB.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o LSTDmu.o criteria.o
-	make -C GridWorld criteria_lstd_EB.tex && cp GridWorld/criteria_lstd_EB.pdf ./criteria_lstd_EB.pdf
+	$(MAKE) -C GridWorld criteria_lstd_EB.tex && cp GridWorld/criteria_lstd_EB.pdf ./criteria_lstd_EB.pdf
 
     #+end_src
 
@@ -67,8 +67,8 @@ criteria_lstd_EB.pdf: LSPI.o LSTDQ.o utils.o greedy.o abbeel2004apprenticeship.o
   C code is compiled with
   
     #+begin_src make :tangle Makefile
-CFLAGS=-g -Wall -pedantic -std=c99 `pkg-config --cflags gsl` -I..
-LFLAGS=`pkg-config --libs gsl` -lm -g
+export CFLAGS=-g -Wall -pedantic -std=c99 `pkg-config --cflags gsl`
+export LFLAGS=`pkg-config --libs gsl` -lm -g
     #+end_src
 ** Cleaning
     #+begin_src makefile :tangle Makefile
@@ -77,9 +77,9 @@ clean:
 	find . -maxdepth 1 -iname "*.pdf" | xargs -tr rm &&\
 	find . -maxdepth 1 -iname "*~"    | xargs -tr rm &&\
 	find . -maxdepth 1 -iname "*.html"    | xargs -tr rm &&\
-	make -C ChainWalk clean         
-	make -C GridWorld clean
-	make -C InvertedPendulum clean
+	$(MAKE) -C ChainWalk clean         
+	$(MAKE) -C GridWorld clean
+	$(MAKE) -C InvertedPendulum clean
 	find . -maxdepth 1 -iname "RL_Globals.h"   | xargs -tr rm &&\
 	find . -maxdepth 1 -iname "LSTDQ.h"   | xargs -tr rm &&\
 	find . -maxdepth 1 -iname "LSTDQ.c"   | xargs -tr rm &&\
@@ -120,7 +120,7 @@ HTML_FILES=$(ORG_CODE_FILES:.org=.html)
 
 doc: $(HTML_FILES)
 	mkdir -p doc &&\
-	for dir in $(SUB_DIRS); do make -C $$dir doc && mkdir -p doc/$$dir && mv $$dir/*.html doc/$$dir/; done &&\
+	for dir in $(SUB_DIRS); do $(MAKE) -C $$dir doc && mkdir -p doc/$$dir && mv $$dir/*.html doc/$$dir/; done &&\
 	mv *.html doc/
 
 %.html:%.org
@@ -133,7 +133,7 @@ doc: $(HTML_FILES)
     #+begin_src make :tangle Makefile
 code:$(ORG_CODE_FILES)
 	for file in $(ORG_CODE_FILES); do emacs -batch --visit $$file --funcall org-babel-tangle --script ~/.emacs; done &&\
-	for dir in $(SUB_DIRS); do make -C $$dir code ; done &&\
+	for dir in $(SUB_DIRS); do $(MAKE) -C $$dir code ; done &&\
 	touch code
     #+end_src
 * Common object files
