--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -1,5 +1,8 @@
 * Gridworld
   The GridWorld is a classical toy problem, used and described for example in \cite{ng2000algorithms}.
+  #+begin_src make :tangle Makefile
+  CFLAGS+=-I..
+   #+end_src
 
 * Implementation
   We have coded both a simulator and a generator.
